@@ -1,10 +1,10 @@
 package org.lazywizard.lazylib;
 
 /**
- * Utility class taken from the <a href="http://slick.ninjacave.com/">Slick2D</a> game library to
- * handle Java's odd trig performance issues.
+ * Math utility class that trades accuracy for speed, often returning several times faster than {@link Math}'s
+ * equivalent functions.
  *
- * @author JeffK
+ * @author Various (see javadoc of individual methods for attributions)
  * @since 1.0
  */
 public class FastTrig
@@ -16,10 +16,15 @@ public class FastTrig
      * The results may be very slightly off from what the Math and StrictMath
      * trig functions give due to
      * rounding in the angle reduction but it will be very very close.
+     * <p>
+     * Originally written by JeffK, and taken from the <a href="http://slick.ninjacave.com/">Slick2D</a> game library.
      *
      * @param radians The original angle
      *
      * @return The reduced Sin angle
+     *
+     * @author JeffK (taken from the <a href="http://slick.ninjacave.com/">Slick2D</a> game library)
+     * @since 1.0
      */
     private static double reduceSinAngle(double radians)
     {
@@ -37,11 +42,16 @@ public class FastTrig
     }
 
     /**
-     * Get the sine of an angle
+     * Get the sine of an angle.
+     * <p>
+     * Originally written by JeffK, and taken from the <a href="http://slick.ninjacave.com/">Slick2D</a> game library.
      *
-     * @param radians The angle
+     * @param radians The angle, in radians.
      *
-     * @return The sine of the angle
+     * @return The sine of {@code radians}.
+     *
+     * @author JeffK (taken from the <a href="http://slick.ninjacave.com/">Slick2D</a> game library)
+     * @since 1.0
      */
     public static double sin(double radians)
     {
@@ -57,15 +67,66 @@ public class FastTrig
     }
 
     /**
-     * Get the cosine of an angle
+     * Get the cosine of an angle.
+     * <p>
+     * Originally written by JeffK, and taken from the <a href="http://slick.ninjacave.com/">Slick2D</a> game library.
      *
-     * @param radians The angle
+     * @param radians The angle, in radians.
      *
-     * @return The cosine of the angle
+     * @return The cosine of {@code radians}.
+     *
+     * @author JeffK (taken from the <a href="http://slick.ninjacave.com/">Slick2D</a> game library)
+     * @since 1.0
      */
     public static double cos(double radians)
     {
         return sin(radians + Math.PI / 2);
+    }
+
+    /**
+     * Returns the arc tangent of a value. Accurate to within 0.005 radians, or 0.29 degrees.
+     * <p>
+     * Originally written by Nic Taylor, and taken from <a href="https://www.dsprelated.com/showarticle/1052.php">this
+     * page</a>.
+     *
+     * @param z The value to calculate the arc tangent of.
+     *
+     * @return The arc tangent of {@code z}, in radians.
+     *
+     * @author Nic Taylor (taken from <a href="https://www.dsprelated.com/showarticle/1052.php">this page</a>
+     * @since 2.3
+     */
+    public static double atan(double z)
+    {
+        return (0.97239411 + -0.19194795 * z * z) * z;
+    }
+
+    /**
+     * Returns the angle theta from the conversion of rectangular coordinates (x, y) to polar coordinates (r, theta).
+     * Accurate to within 0.005 radians, or 0.29 degrees.
+     * <p>
+     * Originally written by Nic Taylor, further modified by imuli, and taken from <a
+     * href="https://www.dsprelated.com/showarticle/1052.php">this page</a>.
+     *
+     * @param y The ordinate coordinate.
+     * @param x The abscissa coordinate.
+     *
+     * @return The theta component of the point (r, theta) in polar coordinates that corresponds to the point (x, y) in
+     *         Cartesian coordinates.
+     *
+     * @author Nic Taylor and imuli (taken from <a href="https://www.dsprelated.com/showarticle/1052.php">this
+     *         page</a>
+     * @since 2.3
+     */
+    public static double atan2(double y, double x)
+    {
+        final double ay = Math.abs(y), ax = Math.abs(x);
+        final boolean invert = ay > ax;
+        final double z = invert ? ax / ay : ay / ax;    // [0,1]
+        double th = atan(z);                            // [0,π/4]
+        if (invert) th = Math.PI / 2f - th;             // [0,π/2]
+        if (x < 0) th = Math.PI - th;                   // [0,π]
+        return (float) Math.copySign(th, y);            // [-π,π]
     }
 
     private FastTrig()
